kubernetes/apps/network/external-services/garage-webui/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-webui
  annotations:
    gatus.home-operations.com/endpoint: |-
      path: /
spec:
  hostnames:
    - garage.negative7.com
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: garage-webui
      matches:
        - path:
            type: PathPrefix
            value: /
